--- a/index.html
+++ b/index.html
@@ -38,7 +38,60 @@
         </time>
         <main>
             <section>
-                <section class="component component-home" route="/"></section>
+                <section class="component component-home" route="/">
+                    
+                <article class="article-ring">
+                    <section>
+                        <div class="ring-spectrum">
+                            <section>
+                                <div id="coin" onclick="
+                                    var flipResult = Math.random();
+                                    setTimeout(function(){
+                                    }, 100);">
+                                    <div class="side-a"></div>
+                                    <div class="side-b"></div>
+                                </div>
+                                <box class="background-color-red ring ring-red" href="/codex" id="spectrum-codex">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-orange ring ring-orange" href="/games" id="spectrum-games">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-yellow ring ring-yellow" href="/photo" id="spectrum-photo">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-green ring ring-green" href="/pages" id="spectrum-pages">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-blue ring ring-blue" href="/audio" id="spectrum-audio">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-indigo ring ring-indigo" href="/video" id="spectrum-video">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                                <box class="background-color-violet ring ring-violet" href="/space" id="spectrum-space">
+                                    <section>
+                                        <picture></picture>
+                                    </section>
+                                </box>
+                            </section>
+                        </div>
+                    </section>
+                </article>
+                
+                </section>
             </section>
         </main>
         <user>
